--- a/css/resume.css
+++ b/css/resume.css
@@ -164,11 +164,11 @@ section.resume-section .resume-item .resume-date {
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: rgb(89, 184, 80) !important;
 }
 
 a {
-  color: #BD5D38;
+  color: rgb(89, 184, 80);
 }
 
 a:hover, a:focus, a:active {
